--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-theme: jekyll-theme-minimal
-title: null
-description: null
+theme: jekyll-theme-cayman
+title: ""
+description: ""
 show_downloads: false
-logo: null
 github:
   is_project_page: false
